Added some views

--- a/MvcApplication1/Views/Account/Login.cshtml
+++ b/MvcApplication1/Views/Account/Login.cshtml
@@ -14,7 +14,8 @@
                 <fieldset>
                     <legend>
                         <br>
-                        Log in Form</legend>
+                        Log in Form
+                    </legend>
                     <div class="form-group">
                         @*@Html.LabelFor(m => m.UserName)*@
                         @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "Username" })
