--- a/MvcApplication1/Views/Account/Settings.cshtml
+++ b/MvcApplication1/Views/Account/Settings.cshtml
@@ -27,7 +27,7 @@
                 </tr>
                 <tr>
                     <td><b>Password</b></td>
-                    <td><a href="~/Account/Manage">Change Password</td>
+                    <td><a href="~/Account/Manage">Change Password</a></td>
                 </tr>
             </tbody>
         </table>
