--- a/MvcApplication1/Content/style.css
+++ b/MvcApplication1/Content/style.css
@@ -1,4 +1,4 @@
-﻿/* toggle button din ~views/dashboard */
+﻿/* ios 7 toggle button din ~views/dashboard */
 * {
   margin: 0;
   padding: 0;
@@ -82,3 +82,4 @@ html, body {
 /* ******************************************************* */
 
 /* ******************************************************* */
+
