--- a/MvcApplication1/Content/bootstrap.css
+++ b/MvcApplication1/Content/bootstrap.css
@@ -42,6 +42,8 @@ html {
 }
 body {
   margin: 0;
+  padding-bottom: 70px;
+  padding-top: 70px;
 }
 a:focus {
   outline: thin dotted;
@@ -673,8 +675,8 @@ pre code {
   clear: both;
 }
 .row {
-  margin-left: -15px;
-  margin-right: -15px;
+  /*margin-left: -15px;
+  margin-right: -15px;*/
 }
 .row:before,
 .row:after {
@@ -1513,7 +1515,7 @@ input[type="search"] {
 input[type="radio"],
 input[type="checkbox"] {
   margin: 4px 0 0;
-  margin-top: 1px \9;
+  margin-top: 1px;
   /* IE8-9 */
 
   line-height: normal;
@@ -2106,8 +2108,8 @@ fieldset[disabled] .btn-link:focus {
 .btn-lg {
   padding: 10px 16px;
   font-size: 18px;
-  line-height: 1.33;
-  border-radius: 6px;
+  line-height: 1.55;
+  border-radius: 0px;
 }
 .btn-sm,
 .btn-xs {
