--- a/MvcApplication1/Views/Account/Register.cshtml
+++ b/MvcApplication1/Views/Account/Register.cshtml
@@ -1,9 +1,10 @@
-﻿@model MvcApplication1.Models.RegisterModel
+﻿@model TurnMeOff.Repository.Models.RegisterModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="row">
-    <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3">
+<div class="row" style="top:-50px">
+    <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12 box-transparency">
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
@@ -11,23 +12,34 @@
             <fieldset>
                 <legend>
                     <br>
-                    Register</legend>
+                    Register
+                </legend>
                 <div class="form-group">
-                    @*@Html.LabelFor(m => m.UserName)*@
-                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "Username" })
-                    @Html.ValidationMessageFor(m => m.UserName)
+                    @Html.TextBoxFor(m => m.Firstname, new { @class = "form-control", @placeholder = "First Name" })
+                    @Html.ValidationMessageFor(m => m.Firstname)
                 </div>
                 <div class="form-group">
-                    @*@Html.LabelFor(m => m.Password)*@
+                    @Html.TextBoxFor(m => m.Lastname, new { @class = "form-control", @placeholder = "Last Name" })
+                </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Your Email" })
+                    @Html.ValidationMessageFor(m => m.Email)
+                </div>
+                <div class="form-group">
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
                     @Html.ValidationMessageFor(m => m.Password)
                 </div>
                 <div class="form-group">
-                    @*@Html.LabelFor(m => m.ConfirmPassword)*@
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
                     @Html.ValidationMessageFor(m => m.ConfirmPassword)
                 </div>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.MasterDeviceID, new { @class = "form-control", @placeholder = "Master Device Code" })
+                    @Html.ValidationMessageFor(m => m.MasterDeviceID)
+                </div>
                 <button type="submit" value="Register" class="btn btn-success btn-block">Register</button>
+                <br>
+                <br>
             </fieldset>
         }
     </div>
