--- a/MvcApplication1/Views/Devices/Settings.cshtml
+++ b/MvcApplication1/Views/Devices/Settings.cshtml
@@ -1,26 +1,65 @@
-﻿@{
-    ViewBag.Title = "DevicesSettings";
+﻿@*@model TurnMeOff.Repository.Models.UserModel*@
+@{
+    ViewBag.Title = "Settings";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+    
+    <!-- BODY -->
+    <div class="row">
+        <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
 
-<div class="row">
-    <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <td style="font-size: large"><b>General Devices Settings</b></td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><b>Schedule</b></td>
-                    <td><a href="#">Change default schedule</a></td>
-                </tr>
-                <tr>
-                    <td><b>On vacation</b></td>
-                    <td><a href="#">Turn off all devices</a></td>
-                </tr>
-            </tbody>
-        </table>
+            <!-- BEGIN LIST-->
+            <div class="list-group" style="padding-bottom: 50px">
+
+                <!-- POWEROFF -->
+                <div class="list-group-item">
+                    <br>
+                    <h4 class="list-group-item-heading pull-left"><b>Poweroff</b></h4>
+                    <div class="btn btn-xs btn-info pull-right"><b>Schedule next shut down!</b></div>
+                    <br>
+                    <br>
+                </div>
+
+                <!-- HELP -->
+                <div class="list-group-item">
+                    <br>
+                    <h4 class="list-group-item-heading pull-left"><b>Help</b></h4>
+                    <div class="btn btn-xs btn-info pull-right"><b>User's manual</b></div>
+                    <br>
+                    <br>
+                </div>
+
+                <!-- REPORT -->
+                <div class="list-group-item">
+                    <br>
+                    <h4 class="list-group-item-heading pull-left"><b>Report a problem</b></h4>
+                    <div class="btn btn-xs btn-success pull-right"><b>Contact us!</b></div>
+                    <br>
+                    <br>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+    <!-- BOTTOM NAVBAR -->
+    <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation" style="background-color: transparent">
+        <div class="rowCustom">
+            <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
+                <div class="btn-group btn-group-justified">
+                    <a id="cancelButton" type="button" class="btn btn-warning btn-lg btn-block" style="font-size: large" href="#">Back to My devices!</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+}
+
+@section Scripts {
+    <script type="text/javascript">
+        $('#cancelButton').click(function () {
+            location.href = "/Devices/List";
+        });
+    </script>
+}
