--- a/MvcApplication1/Content/bootstrap.css
+++ b/MvcApplication1/Content/bootstrap.css
@@ -3666,7 +3666,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
+  background-color: #eeeeee;
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
