--- a/MvcApplication1/Content/style.css
+++ b/MvcApplication1/Content/style.css
@@ -89,8 +89,12 @@ html, body {
     background-color: rgb(255,255,255);
 }
 
-.background-img {
-    background-image: url(../images/background.png);
+.loginBackground-img {
+    background-image: url(../images/loginBackground.png);
+}
+
+.listBackground-img {
+    /*background-image: url(../images/listBackground.png);*/
 }
 
 .field-validation-error {
@@ -117,4 +121,17 @@ input:focus::-webkit-input-placeholder {
 .rowCustom {
     margin-left: -15px;
     margin-right: -15px;
+}
+
+.sensorValue {
+    position: absolute;
+    top: 65%;
+    left: 95%;
+    width: 50px;
+    height: 30px;
+    background-color: transparent;
+    margin: -25px -50px;
+    overflow: hidden;
+    text-align:center;
+    font-size:16px;
 }
