--- a/MvcApplication1/Views/Account/Register.cshtml
+++ b/MvcApplication1/Views/Account/Register.cshtml
@@ -1,9 +1,10 @@
 ﻿@model TurnMeOff.Repository.Models.RegisterModel
 @{
     ViewBag.Title = "Register";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
-<div class="row" style="top:-50px">
+
+<div class="row" style="top: -50px">
     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12 box-transparency">
         @using (Html.BeginForm())
         {
@@ -34,8 +35,9 @@
                     @Html.ValidationMessageFor(m => m.ConfirmPassword)
                 </div>
                 <div class="form-group">
-                    @Html.TextBoxFor(m => m.MasterDeviceID, new { @class = "form-control", @placeholder = "Master Device Code" })
+                    @Html.TextBoxFor(m => m.MasterDeviceID, new { @id = "masterDeviceCode", @class = "form-control", @placeholder = "Master Device Code" })
                     @Html.ValidationMessageFor(m => m.MasterDeviceID)
+                    <p class="hidden" id="helper"><b>This code is located on the bottom of your master device!</b></p>
                 </div>
                 <button type="submit" value="Register" class="btn btn-success btn-block">Register</button>
                 <br>
@@ -45,6 +47,18 @@
     </div>
 </div>
 
+
+
+
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript">
+        $('#masterDeviceCode').click(function () {
+            $('#helper').removeClass("hidden");
+        });
+        $('#masterDeviceCode').focusout(function () {
+            $('#helper').addClass("hidden");
+        });
+    </script>
 }
