--- a/MvcApplication1/Views/Devices/Add.cshtml
+++ b/MvcApplication1/Views/Devices/Add.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Add";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutList.cshtml";
     var pendingDeviceId = ViewBag.PendingDeviceId;
     var pendingDeviceUserId = ViewBag.PendingDeviceUserId;    
             
@@ -20,6 +20,7 @@
             <!-- BEGIN LIST-->
             <div class="list-group" style="padding-bottom: 50px">
                 <input type="hidden" id="@pendingDeviceId" name="deviceID" value="@pendingDeviceId" />
+
                 <!-- NAME -->
                 <div class="list-group-item">
                     <h3>Add device</h3>
@@ -41,18 +42,6 @@
                     @Html.TextBoxFor(model => model.Description, new { @class = "form-control", @placeholder = "Description" })
                 </div>
 
-                <!-- isOn -->
-                <div class="list-group-item">
-                    <br>
-                    <h4 class="list-group-item-heading"><b>Is On</b></h4>
-                    <div class="toggle">
-                        @Html.CheckBoxFor(model => model.isOn, new { @class = "check" })
-                        <b class="b switch"></b>
-                        <b class="b track"></b>
-                    </div>
-                    <br>
-                </div>
-
                 <!-- isSENSOR -->
                 <div class="list-group-item">
                     <br>
@@ -64,7 +53,6 @@
                     </div>
                     <br>
                 </div>
-
 
                 <!-- STATUS -->
                 <div class="list-group-item clearfix">
@@ -85,6 +73,7 @@
             </div>
         </div>
     </div>
+    
     <!-- BOTTOM NAVBAR -->
     <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation" style="background-color: transparent">
         <div class="rowCustom">
